--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,7 +18,7 @@ body{
 	height: 734px;
 	border-top: 5px solid black;
 	margin: auto;
-	background-color: black;
+	background-color: #e8e7ea;
 	border-bottom: 62px solid #1f1f1f;
 }
  
